# stirling

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: StirlingConfig.cmake.in
src/: main.cpp
